--- a/k8s/secret-redis.yaml
+++ b/k8s/secret-redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: redis-secret
+  name: thaiha-redis-secret
 type: Opaque
 stringData:
   REDIS_PASSWORD: password
