--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -81,7 +81,7 @@ jobs:
 
           # 4. Check if anything actually changed (to avoid empty commits)
           if [[ -n $(git status -s) ]]; then
-            git add k8s/backend-deployment.yml k8s/frontend-deployment.yml
+            git add k8s/backend.yml k8s/frontend.yml
             git commit -m "Update image tags to $NEW_TAG [skip ci]"
             git push
             echo "yamlfiles have been successfully updated and pushed."
