--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -74,14 +74,14 @@ jobs:
 
           # 3. Use 'sed' to replace the image tag in the text files
           # This command looks for "image: ...backend:SOMETHING" and replaces it with "image: ...backend:NEW_TAG"
-          sed -i "s|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-backend:.*|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-backend:$NEW_TAG|g" k8s/backend-deployment.yml
+          sed -i "s|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-backend:.*|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-backend:$NEW_TAG|g" k8s/backend.yaml
           
           # Same for frontend
-          sed -i "s|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-frontend:.*|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-frontend:$NEW_TAG|g" k8s/frontend-deployment.yml
+          sed -i "s|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-frontend:.*|image: ghcr.io/${{ github.repository_owner }}/thaiha-guestbook-frontend:$NEW_TAG|g" k8s/frontend.yaml
 
           # 4. Check if anything actually changed (to avoid empty commits)
           if [[ -n $(git status -s) ]]; then
-            git add k8s/backend.yml k8s/frontend.yml
+            git add k8s/backend.yaml k8s/frontend.yaml
             git commit -m "Update image tags to $NEW_TAG [skip ci]"
             git push
             echo "yamlfiles have been successfully updated and pushed."
