change the names in yaml files

--- a/k8s/secret-db.yaml
+++ b/k8s/secret-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secret
+  name: thaiha-postgres-secret
 type: Opaque
 stringData:
   POSTGRESQL_PASSWORD: password
