Update the server name in nginx.conf to fix the communication btw nginx and the service

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,7 +29,7 @@ http {
     resolver_timeout 5s;
 
     upstream backend {
-        server backend:8080;
+        server thaiha- backend:8080;
     }
 
     server {
