feat: adapt manifests for local Minikube deployment
- Replace OpenShift Route with standard Kubernetes Ingress
- Add nginx ConfigMap with Minikube-compatible DNS resolver and mount it in frontend
- Fix ConfigMap DB_HOST/REDIS_HOST to match actual service names
- Set replicas to 1 for frontend and backend to fit Minikube resources
- Point ArgoCD Application to minikube branch and argocd namespace

--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -2,12 +2,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: thaiha-guestbook-argocd
-  namespace: openshift-gitops 
+  namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/thaiha-hub/LE_guestbook_ArgoCD
-    targetRevision: HEAD
+    targetRevision: minikube
     path: k8s
   destination:
     server: https://kubernetes.default.svc
