--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,13 +3,72 @@ kind: ConfigMap
 metadata:
   name: thaiha-guestbook-config
 data:
-  DB_HOST: postgres
+  DB_HOST: thaiha-postgres
   DB_PORT: "5432"
   DB_NAME: guestbook
   DB_USER: guestbook
 
-  REDIS_HOST: redis
+  REDIS_HOST: thaiha-redis
   REDIS_PORT: "6379"
 
   PORT: "8080"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: thaiha-nginx-config
+data:
+  nginx.conf: |
+    worker_processes auto;
+    error_log /var/log/nginx/error.log notice;
+    pid /run/nginx.pid;
+
+    include /usr/share/nginx/modules/*.conf;
+
+    events {
+        worker_connections 1024;
+    }
+
+    http {
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile            on;
+        tcp_nopush          on;
+        keepalive_timeout   65;
+        types_hash_max_size 4096;
+
+        include             /etc/nginx/mime.types;
+        default_type        application/octet-stream;
+
+        resolver kube-dns.kube-system.svc.cluster.local valid=30s;
+        resolver_timeout 5s;
+
+        upstream backend {
+            server thaiha-backend:8080;
+        }
+
+        server {
+            listen 8080 default_server;
+            server_name _;
+
+            root /opt/app-root/src;
+            index index.html;
+
+            location / {
+                try_files $uri $uri/ /index.html;
+            }
+
+            location /api/ {
+                proxy_pass http://backend;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+        }
+    }
 
