Use standard postgres and redis images for Minikube compatibility
- Switch from quay.io/fedora/postgresql-16 to postgres:16-alpine
- Switch from quay.io/kurs/redis to redis:7-alpine
- Update postgres env vars to match official image (POSTGRES_* instead of POSTGRESQL_*)
- Add redis password configuration via command

--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -14,13 +14,14 @@ spec:
     spec:
       containers:
         - name: redis
-          image: quay.io/kurs/redis:latest
+          image: redis:7-alpine
           env:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: thaiha-redis-secret
                   key: REDIS_PASSWORD
+          command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
           resources:
             requests:
               cpu: "50m"
